--- a/index.html
+++ b/index.html
@@ -46,21 +46,56 @@
             <ul class="places__catalogue">
                 <li class="card__item">
                     <img class="card__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
+                    <div class="card__info">
+                      <h2 class="card__title">Карачаевск</h2>
+                      <div class="card__like">
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                      </div>
+                    </div>
                 </li>
                 <li class="card__item">
                     <img class="card__image" src="/images/Elbrus.png" alt="гора Эльбрус">
+                    <div class="card__info">
+                      <h2 class="card__title">Эльбрус</h2>
+                      <div class="card__like">
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                      </div>
+                    </div>
                 </li>
                 <li class="card__item">
                     <img class="card__image" src="/images/Donbai.png" alt="Донбай">
+                    <div class="card__info">
+                      <h2 class="card__title">Донбай</h2>
+                      <div class="card__like">
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                      </div>
+                    </div>
                 </li>
                 <li class="card__item">
                     <img class="card__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
+                    <div class="card__info">
+                      <h2 class="card__title">Карачаевск</h2>
+                      <div class="card__like">
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                      </div>
                 </li>
                 <li class="card__item">
                     <img class="card__image" src="/images/Elbrus.png" alt="гора Эльбрус">
+                    <div class="card__info">
+                      <h2 class="card__title">Эльбрус</h2>
+                      <div class="card__like">
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                      </div>
+                    </div>
                 </li>
                 <li class="card__item">
                     <img class="card__image" src="/images/Donbai.png" alt="Донбай">
+                    <div class="card__info">
+                      <h2 class="card__title">Донбай</h2>
+                      <div class="card__like">
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                      </div>
+                    </div>
                 </li>
             </ul>
           </section>
