--- a/index.html
+++ b/index.html
@@ -15,31 +15,23 @@
     </header>
 
     <main class="container">
-        <div class="content">
-          <section class="profile">
+      <div class="content">
+        <section class="profile">
             <div class="profile__avatar">
               <img class="profile__image" src="/images/avatar.jpg" alt="Профиль фото">
               <div class="profile__cover">
                 <button
                   class="button profile__button-avatar"
-                  aria-label="Обновить"
-                ></button>
+                  aria-label="Обновить">
+                </button>
               </div>
             </div>
             <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button
-              type="button"
-              aria-label="Редактировать"
-              class="button profile__button-edit transition"
-            ></button>
+              <button type="button" aria-label="Редактировать" class="button profile__button-edit transition"></button>
               <p class="profile__about">Исследователь океана</p>
             </div>
-            <button
-            type="button"
-            aria-label="Добавить картинку"
-            class="button profile__button-add transition"
-          ></button>
+            <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
           </section>
 
           <section class="places">
@@ -99,8 +91,11 @@
                 </li>
             </ul>
           </section>
-
         </div>
+        <footer class="footer">
+          <p class="footer__copyright">&copy; 2021 Татьяна Купцова</p>
+        </footer>
+  
     </main>
 </body>
 </html>
