--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
             <div class="profile__avatar">
               <img class="profile__image" src="/images/avatar.jpg" alt="Профиль фото">
               <div class="profile__cover">
-                <button
-                  class="button profile__button-avatar"
-                  aria-label="Обновить">
-                </button>
+                <button class="button profile__button-avatar"aria-label="Обновить"></button>
               </div>
             </div>
             <div class="profile__info">
@@ -64,26 +61,26 @@
                     </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
+                    <img class="card__image" src="/images/архыз.jpeg" alt="Архыз">
                     <div class="card__info">
-                      <h2 class="card__title">Карачаевск</h2>
+                      <h2 class="card__title">Архыз</h2>
                       <div class="card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/Elbrus.png" alt="гора Эльбрус">
+                    <img class="card__image" src="/images/камчатка.jpg" alt="Камчатка">
                     <div class="card__info">
-                      <h2 class="card__title">Эльбрус</h2>
+                      <h2 class="card__title">Камчатка</h2>
                       <div class="card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/Donbai.png" alt="Донбай">
+                    <img class="card__image" src="/images/baikal.jpg" alt="Байкал">
                     <div class="card__info">
-                      <h2 class="card__title">Донбай</h2>
+                      <h2 class="card__title">Байкал</h2>
                       <div class="card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
