--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <div class="profile__avatar">
               <img class="profile__image" src="/images/avatar.jpg" alt="Профиль фото">
               <div class="profile__cover">
-                <button class="button profile__button-avatar"aria-label="Обновить"></button>
               </div>
             </div>
             <div class="profile__info">
@@ -30,6 +29,49 @@
             </div>
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
           </section>
+
+          <section class="popup popup__edit">
+            <div class="popup__container">
+              <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition"></button>
+              <h2 class="popup__title"> Редактировать профиль</h2>
+              <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
+                <label class="popup__field">
+                  <input
+                    type="text"
+                    id="name-input"
+                    class="popup__item popup__item_input-name"
+                    name="name"
+                    value=""
+                    placeholder="Имя"
+                    required
+                    minlength="2"
+                    maxlength="40"
+                  />
+                  <span id="name-input-error" class="popup__item-error"></span>
+                </label>
+                <label class="popup__field">
+                  <input
+                    type="text"
+                    id="about-input"
+                    class="popup__item popup__item_input-about"
+                    name="about"
+                    value=""
+                    placeholder="Об авторе"
+                    required
+                    minlength="2"
+                    maxlength="200"
+                  />
+                  <span id="about-input-error" class="popup__item-error"></span>
+                </label>
+                <button
+                  type="submit"
+                  class="button popup__button-submit popup__button-submit-edit"
+                >
+                  Сохранить
+                </button>
+              </form>
+            </div>
+          </section> 
 
           <section class="places">
             <ul class="places__catalogue">
@@ -89,6 +131,7 @@
             </ul>
           </section>
         </div>
+
         <footer class="footer">
           <p class="footer__copyright">&copy; 2021 Татьяна Купцова</p>
         </footer>
