--- a/index.html
+++ b/index.html
@@ -29,56 +29,13 @@
             </div>
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
           </section>
-
-          <section class="popup popup__edit">
-            <div class="popup__container">
-              <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition"></button>
-              <h2 class="popup__title"> Редактировать профиль</h2>
-              <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
-                <label class="popup__field">
-                  <input
-                    type="text"
-                    id="name-input"
-                    class="popup__item popup__item_input-name"
-                    name="name"
-                    value=""
-                    placeholder="Имя"
-                    required
-                    minlength="2"
-                    maxlength="40"
-                  />
-                  <span id="name-input-error" class="popup__item-error"></span>
-                </label>
-                <label class="popup__field">
-                  <input
-                    type="text"
-                    id="about-input"
-                    class="popup__item popup__item_input-about"
-                    name="about"
-                    value=""
-                    placeholder="Об авторе"
-                    required
-                    minlength="2"
-                    maxlength="200"
-                  />
-                  <span id="about-input-error" class="popup__item-error"></span>
-                </label>
-                <button
-                  type="submit"
-                  class="button popup__button-submit popup__button-submit-edit"
-                >
-                  Сохранить
-                </button>
-              </form>
-            </div>
-          </section> 
-
+        
           <section class="places">
             <ul class="places__catalogue">
                 <li class="card__item">
                     <img class="card__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
                     <div class="card__info">
-                      <h2 class="card__title">Карачаевск</h2>
+                      <h2 class="card__title">Карачаево-Ч..</h2>
                       <div class="card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
@@ -130,12 +87,49 @@
                 </li>
             </ul>
           </section>
-        </div>
+      
+          <section class="popup popup__opened">
+          <div class="popup__container">
+            <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition"></button>
+            <h2 class="popup__title"> Редактировать профиль</h2>
+            <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
+              <label class="popup__field">
+                <input
+                  type="text"
+                  id="name-input"
+                  class="popup__item popup__item_input-name"
+                  name="name"
+                  value=""
+                  placeholder="Имя"
+                  required
+                  minlength="2"
+                  maxlength="40"
+                >
+              </label>
+              <label class="popup__field">
+                <input
+                  type="text"
+                  id="about-input"
+                  class="popup__item popup__item_input-about"
+                  name="about"
+                  value=""
+                  placeholder="Об авторе"
+                  required
+                  minlength="2"
+                  maxlength="200"
+                >
+              </label>
+              <button type="submit" class="button popup__button-submit popup__button-submit-edit">Сохранить</button>
+            </form>
+          </div>
+        </section> 
 
         <footer class="footer">
           <p class="footer__copyright">&copy; 2021 Татьяна Купцова</p>
         </footer>
-  
+
+      </div>  
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
