--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
               <p class="profile__about">Исследователь океана</p>
             </div>
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
-          </section>
+        </section>
         
-          <section class="places">
+        <section class="places">
             <ul class="places__catalogue">
                 <li class="card__item">
                     <img class="card__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
                     <div class="card__info">
-                      <h2 class="card__title">Карачаево-Ч..</h2>
+                      <h2 class="card__title">Карачаево-Черкесия</h2>
                       <div class="card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
@@ -66,7 +66,8 @@
                       <div class="card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
-                </li>
+                    </div>
+                 </li>
                 <li class="card__item">
                     <img class="card__image" src="/images/камчатка.jpg" alt="Камчатка">
                     <div class="card__info">
@@ -86,9 +87,9 @@
                     </div>
                 </li>
             </ul>
-          </section>
+        </section>
       
-          <section class="popup popup__opened">
+        <section class="popup popup__edit">
           <div class="popup__container">
             <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition"></button>
             <h2 class="popup__title"> Редактировать профиль</h2>
@@ -119,17 +120,18 @@
                   maxlength="200"
                 >
               </label>
-              <button type="submit" class="button popup__button-submit popup__button-submit-edit">Сохранить</button>
+              <button type="submit" class="popup__button-submit popup__button-submit-edit">Сохранить</button>
             </form>
           </div>
         </section> 
 
+
         <footer class="footer">
-          <p class="footer__copyright">&copy; 2021 Татьяна Купцова</p>
+          <p class="footer__copyright">&copy; 2021 Tatiana KUPTSOVA</p>
         </footer>
 
       </div>  
     </main>
-    <script src="script.js"></script>
+    <script src="script.js"></script>  
 </body>
 </html>
