--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MESTO</title>
-    <link rel="icon" href="/images/logo.png">
-    <link rel="stylesheet" href="/pages/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MESTO</title>
+  <link rel="icon" href="/images/logo.png">
+  <link rel="stylesheet" href="/pages/index.css">
 </head>
 
 <body class="page">
@@ -24,7 +25,7 @@
             </div>
             <div class="profile__info">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button type="button" aria-label="Редактировать" class="button profile__button-edit transition"></button>
+              <button type="button" aria-label="Редактировать" class="button profile__edit-button transition"></button>
               <p class="profile__about">Исследователь океана</p>
             </div>
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
@@ -89,39 +90,41 @@
             </ul>
         </section>
       
+       
         <section class="popup popup__edit">
-          <div class="popup__container">
-            <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition"></button>
-            <h2 class="popup__title"> Редактировать профиль</h2>
-            <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
-              <label class="popup__field">
-                <input
-                  type="text"
-                  id="name-input"
-                  class="popup__item popup__item_input-name"
-                  name="name"
-                  value=""
-                  placeholder="Имя"
-                  required
-                  minlength="2"
-                  maxlength="40"
-                >
-              </label>
-              <label class="popup__field">
-                <input
-                  type="text"
-                  id="about-input"
-                  class="popup__item popup__item_input-about"
-                  name="about"
-                  value=""
-                  placeholder="Об авторе"
-                  required
-                  minlength="2"
-                  maxlength="200"
-                >
-              </label>
-              <button type="submit" class="popup__button-submit popup__button-submit-edit">Сохранить</button>
-            </form>
+            <div class="popup__container">
+              <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition"></button>
+              <h2 class="popup__title"> Редактировать профиль</h2>
+              <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
+                <label class="popup__field">
+                  <input
+                    type="text"
+                    id="name-input"
+                    class="popup__item popup__item_input-name"
+                    name="name"
+                    value=""
+                    placeholder="Имя"
+                    required
+                    minlength="2"
+                    maxlength="40"
+                  >
+                </label>
+                <label class="popup__field">
+                  <input
+                    type="text"
+                    id="about-input"
+                    class="popup__item popup__item_input-about"
+                    name="about"
+                    value=""
+                    placeholder="Об авторе"
+                    required
+                    minlength="2"
+                    maxlength="200"
+                  >
+                </label>
+                <button type="submit" class="popup__button-submit popup__button-submit-edit">Сохранить</button>
+              </form>
+            </div>
           </div>
         </section> 
 
@@ -132,6 +135,6 @@
 
       </div>  
     </main>
-    <script src="script.js"></script>  
+    <script src="/script/index.js"></script>  
 </body>
 </html>
