--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         </section>
       
        
-        <section class="popup popup__edit">
+        <section class="popup">
             <div class="popup__container">
+              <div class="popup__edit">
               <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition"></button>
               <h2 class="popup__title"> Редактировать профиль</h2>
               <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
@@ -102,7 +103,7 @@
                     id="name-input"
                     class="popup__item popup__item_input-name"
                     name="name"
-                    value=""
+                    value="Жак-Ив Кусто"
                     placeholder="Имя"
                     required
                     minlength="2"
@@ -115,8 +116,8 @@
                     id="about-input"
                     class="popup__item popup__item_input-about"
                     name="about"
-                    value=""
-                    placeholder="Об авторе"
+                    value="Исследователь океана"
+                    placeholder="О себе"
                     required
                     minlength="2"
                     maxlength="200"
@@ -124,6 +125,7 @@
                 </label>
                 <button type="submit" class="popup__button-submit popup__button-submit-edit">Сохранить</button>
               </form>
+            </div>
             </div>
           </div>
         </section> 
