изменены пути images

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="Автор: Татьяна Купцова, 
+  Проектная работа: Место, Сайт: создан в рамках учебы в Яндекс Практикум, 
+  Курс: Веб-разработка">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>MESTO</title>
-  <link rel="icon" href="/images/logo.png">
-  <link rel="stylesheet" href="/pages/index.css">
 </head>
 
 <body class="page">
     <header class="header">
-        <img src="/images/logo.png" alt="Лого" class="header__logo">
+        <img src="./images/logo.png" alt="Лого" class="header__logo">
     </header>
 
     <main class="container">
       <div class="content">
         <section class="profile">
             <div class="profile__avatar">
-              <img class="profile__image" src="/images/avatar.jpg" alt="Профиль фото">
+              <img class="profile__image" src="./images/avatar.jpg" alt="Профиль фото">
               <div class="profile__cover">
               </div>
             </div>
@@ -34,7 +36,7 @@
         <section class="places">
             <ul class="places__catalogue">
                 <li class="card__item">
-                    <img class="card__image" src="/images/Karachaevsk.jpg" alt="Карачаевск">
+                    <img class="card__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
                     <div class="card__info">
                       <h2 class="card__title">Карачаево-Черкесия</h2>
                       <div class="card__like">
@@ -43,7 +45,7 @@
                     </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/Elbrus.png" alt="гора Эльбрус">
+                    <img class="card__image" src="./images/Elbrus.png" alt="гора Эльбрус">
                     <div class="card__info">
                       <h2 class="card__title">Эльбрус</h2>
                       <div class="card__like">
@@ -52,7 +54,7 @@
                     </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/Donbai.png" alt="Донбай">
+                    <img class="card__image" src="./images/Donbai.png" alt="Донбай">
                     <div class="card__info">
                       <h2 class="card__title">Донбай</h2>
                       <div class="card__like">
@@ -61,7 +63,7 @@
                     </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/архыз.jpeg" alt="Архыз">
+                    <img class="card__image" src="./images/архыз.jpeg" alt="Архыз">
                     <div class="card__info">
                       <h2 class="card__title">Архыз</h2>
                       <div class="card__like">
@@ -70,7 +72,7 @@
                     </div>
                  </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/камчатка.jpg" alt="Камчатка">
+                    <img class="card__image" src="./images/камчатка.jpg" alt="Камчатка">
                     <div class="card__info">
                       <h2 class="card__title">Камчатка</h2>
                       <div class="card__like">
@@ -79,7 +81,7 @@
                     </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="/images/baikal.jpg" alt="Байкал">
+                    <img class="card__image" src="./images/baikal.jpg" alt="Байкал">
                     <div class="card__info">
                       <h2 class="card__title">Байкал</h2>
                       <div class="card__like">
