активирована кнопка Сохранить

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   Проектная работа: Место, Сайт: создан в рамках учебы в Яндекс Практикум, 
   Курс: Веб-разработка">
   <link rel="stylesheet" href="./pages/index.css">
+  <title>Место</title>
 </head>
 
 <body class="page">
@@ -24,9 +25,9 @@
               </div>
             </div>
             <div class="profile__info">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <h1 id="profileName" class="profile__name">Жак-Ив Кусто</h1>
               <button type="button" aria-label="Редактировать" class="button profile__edit-button transition"></button>
-              <p class="profile__about">Исследователь океана</p>
+              <p id="profileAbout" class="profile__about">Исследователь океана</p>
             </div>
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
         </section>
