--- a/index.html
+++ b/index.html
@@ -138,6 +138,6 @@
 
       </div>  
     </main>
-    <script src="/script/index.js"></script>  
+    <script src="./script/index.js"></script>  
 </body>
 </html>
