--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
         </section>
         
-        <section class="places">
-            <ul class="places__catalogue">
+        <section class="cards">
+            <ul class="cards__catalogue">
                 <li class="card__item">
                     <img class="card__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
                     <div class="card__info">
@@ -62,7 +62,7 @@
                     </div>
                 </li>
                 <li class="card__item">
-                    <img class="card__image" src="./images/архыз.jpeg" alt="Архыз">
+                    <img class="card__image" src="./images/arhiz.jpeg" alt="Архыз">
                     <div class="card__info">
                       <h2 class="card__title">Архыз</h2>
                       <div class="card__like">
@@ -71,7 +71,7 @@
                     </div>
                  </li>
                 <li class="card__item">
-                    <img class="card__image" src="./images/камчатка.jpg" alt="Камчатка">
+                    <img class="card__image" src="./images/Kamchatka.jpg" alt="Камчатка">
                     <div class="card__info">
                       <h2 class="card__title">Камчатка</h2>
                       <div class="card__like">
@@ -100,7 +100,7 @@
               <h2 class="popup__title"> 
                 Редактировать профиль
               </h2>
-              <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
+              <form name="edit" class="popup__form popup__input_container_edit" action="#" method="POST" novalidate>
                 <label class="popup__field">
                     <input
                       type="text"
