--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
         
         <section class="cards">
             <ul class="cards__catalogue"> 
-                <li class="card__item">
-                    <img class="card__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
-                    <div class="card__info">
-                      <h2 class="card__title">Карачаево-Черкесия</h2>
-                      <div class="card__like">
+                <li class="card card__item">
+                    <img class="card card__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
+                    <div class="card card__info">
+                      <h2 class="card card__title">Карачаево-Черкесия</h2>
+                      <div class="card card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
-                <li class="card__item">
-                    <img class="card__image" src="./images/Elbrus.png" alt="гора Эльбрус">
-                    <div class="card__info">
-                      <h2 class="card__title">Эльбрус</h2>
-                      <div class="card__like">
+                <li class="card card__item">
+                    <img class="card card__image" src="./images/Elbrus.png" alt="гора Эльбрус">
+                    <div class="card card__info">
+                      <h2 class="card card__title">Эльбрус</h2>
+                      <div class="card card__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
