--- a/index.html
+++ b/index.html
@@ -32,58 +32,58 @@
             <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
         </section>
         
-        <section class="cards">
-            <ul class="cards__catalogue"> 
-                <li class="card card__item">
-                    <img class="card card__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
-                    <div class="card card__info">
-                      <h2 class="card card__title">Карачаево-Черкесия</h2>
-                      <div class="card card__like">
+        <section class="places">
+            <ul class="places__catalogue"> 
+                <li class="place__item">
+                    <img class="place__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
+                    <div class="place__info">
+                      <h2 class="place__title">Карачаево-Черкесия</h2>
+                      <div class="place__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
-                <li class="card card__item">
-                    <img class="card card__image" src="./images/Elbrus.png" alt="гора Эльбрус">
-                    <div class="card card__info">
-                      <h2 class="card card__title">Эльбрус</h2>
-                      <div class="card card__like">
+                <li class="place__item">
+                    <img class="place__image" src="./images/Elbrus.png" alt="гора Эльбрус">
+                    <div class="place__info">
+                      <h2 class="place__title">Эльбрус</h2>
+                      <div class="place__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
-                <li class="card__item">
-                    <img class="card__image" src="./images/Donbai.png" alt="Донбай">
-                    <div class="card__info">
-                      <h2 class="card__title">Донбай</h2>
-                      <div class="card__like">
+                <li class="place__item">
+                    <img class="place__image" src="./images/Donbai.png" alt="Донбай">
+                    <div class="place__info">
+                      <h2 class="place__title">Донбай</h2>
+                      <div class="place__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
-                <li class="card__item">
-                    <img class="card__image" src="./images/arhiz.jpeg" alt="Архыз">
-                    <div class="card__info">
-                      <h2 class="card__title">Архыз</h2>
-                      <div class="card__like">
+                <li class="place__item">
+                    <img class="place__image" src="./images/arhiz.jpeg" alt="Архыз">
+                    <div class="place__info">
+                      <h2 class="place__title">Архыз</h2>
+                      <div class="place__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                  </li>
-                <li class="card__item">
-                    <img class="card__image" src="./images/Kamchatka.jpg" alt="Камчатка">
-                    <div class="card__info">
-                      <h2 class="card__title">Камчатка</h2>
-                      <div class="card__like">
+                <li class="place__item">
+                    <img class="place__image" src="./images/Kamchatka.jpg" alt="Камчатка">
+                    <div class="place__info">
+                      <h2 class="place__title">Камчатка</h2>
+                      <div class="place__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
-                <li class="card__item">
-                    <img class="card__image" src="./images/baikal.jpg" alt="Байкал">
-                    <div class="card__info">
-                      <h2 class="card__title">Байкал</h2>
-                      <div class="card__like">
+                <li class="place__item">
+                    <img class="place__image" src="./images/baikal.jpg" alt="Байкал">
+                    <div class="place__info">
+                      <h2 class="place__title">Байкал</h2>
+                      <div class="place__like">
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
