--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Карачаево-Черкесия</h2>
                       <div class="place__like">
+                        <button class="button"></button>
                         <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
