--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Карачаево-Черкесия</h2>
                       <div class="place__like">
-                        <button class="button"></button>
-                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like"></button>
                       </div>
                     </div>
                 </li>
@@ -50,7 +49,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Эльбрус</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like"></button>
                       </div>
                     </div>
                 </li>
@@ -59,7 +58,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Донбай</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like"></button>
                       </div>
                     </div>
                 </li>
@@ -68,7 +67,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Архыз</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like"></button>
                       </div>
                     </div>
                  </li>
@@ -77,7 +76,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Камчатка</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like"></button>
                       </div>
                     </div>
                 </li>
@@ -86,7 +85,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Байкал</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like"></button>
                       </div>
                     </div>
                 </li>
