popup__input_container

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Карачаево-Черкесия</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button like__button transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
@@ -49,7 +49,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Эльбрус</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button like__button transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
@@ -58,7 +58,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Донбай</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button like__button transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
@@ -67,7 +67,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Архыз</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button like__button transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                  </li>
@@ -76,7 +76,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Камчатка</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button like__button transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
@@ -85,7 +85,7 @@
                     <div class="place__info">
                       <h2 class="place__title">Байкал</h2>
                       <div class="place__like">
-                        <button type="button" aria-label="Нравится" class="button like__button transition"></button>
+                        <button type="button" aria-label="Нравится" class="button button__like transition"></button>
                       </div>
                     </div>
                 </li>
@@ -102,7 +102,7 @@
               <h2 class="popup__title"> 
                 Редактировать профиль
               </h2>
-              <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
+              <form name="edit" class="popup__form popup__input_container" action="#" method="POST" novalidate>
                 <label class="popup__field">
                     <input
                       type="text"
