--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <h2 class="popup__title"> 
                 Редактировать профиль
               </h2>
-              <form name="edit" class="popup__form popup__input_container" action="#" method="POST" novalidate>
+              <form name="edit" class="popup__form popup__form_input_container" action="#" method="POST" novalidate>
                 <label class="popup__field">
                     <input
                       type="text"
@@ -111,7 +111,6 @@
                       name="name"
                       value="Жак-Ив Кусто"
                       placeholder="Имя"
-                      required
                     >
                 </label>
                 <label class="popup__field">
@@ -122,7 +121,6 @@
                       name="about"
                       value="Исследователь океана"
                       placeholder="О себе"
-                      required
                     >
                 </label>
                 <button type="submit" class="popup__button-submit popup__button-submit-edit">Сохранить</button>
