popup__button-submit-edit удален и footer из под тега main

--- a/index.html
+++ b/index.html
@@ -109,19 +109,18 @@
                       placeholder="О себе"
                     >
                 </label>
-                <button type="submit" class="popup__button-submit popup__button-submit-edit">Сохранить</button>
+                <button type="submit" class="popup__button-submit">Сохранить</button>
               </form>
             </div>
           </div>
         </section> 
-
-
-        <footer class="footer">
-          <p class="footer__copyright">&copy; 2021 Tatiana KUPTSOVA</p>
-        </footer>
-        
       </div>
     </main>
+
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2021 Tatiana KUPTSOVA</p>
+    </footer>
+
     <script src="./script/index.js"></script>  
 </body>
 </html>
