удален profile__cover transition

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="popup">
       <div class="popup__container">
         <div class="popup__edit">
-          <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit transition">
+          <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit">
           </button>
           <h2 class="popup__title"> 
             Редактировать профиль
@@ -47,7 +47,7 @@
             </label>
             <button type="submit" class="popup__button-submit">Сохранить</button>
           </form>
-        </div>
+          </div>
       </div>
     </section> 
 
@@ -56,15 +56,13 @@
         <section class="profile">
             <div class="profile__avatar">
               <img class="profile__image" src="./images/avatar.jpg" alt="Профиль фото">
-              <div class="profile__cover">
-              </div>
             </div>
             <div class="profile__info">
               <h1 id="profileName" class="profile__name">Жак-Ив Кусто</h1>
-              <button type="button" aria-label="Редактировать" class="button profile__edit-button transition"></button>
+              <button type="button" aria-label="Редактировать" class="button profile__edit-button"></button>
               <p id="profileAbout" class="profile__about">Исследователь океана</p>
             </div>
-            <button type="button" aria-label="Добавить картинку" class="button profile__button-add transition"></button>
+            <button type="button" aria-label="Добавить картинку" class="button profile__button-add"></button>
         </section>
         
         <section class="places">
@@ -73,42 +71,42 @@
                     <img class="place__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
                     <div class="place__info">
                       <h2 class="place__title">Карачаево-Черкесия</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
                     </div>
                 </li>
                 <li class="place__item">
                     <img class="place__image" src="./images/Elbrus.png" alt="гора Эльбрус">
                     <div class="place__info">
                       <h2 class="place__title">Эльбрус</h2>
-                       <button type="button" aria-label="Нравится" class="button place__button-like transition"></button>
+                       <button type="button" aria-label="Нравится" class="button place__button-like"></button>
                     </div>
                 </li>
                 <li class="place__item">
                     <img class="place__image" src="./images/Donbai.png" alt="Донбай">
                     <div class="place__info">
                       <h2 class="place__title">Донбай</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
                     </div>
                 </li>
                 <li class="place__item">
                     <img class="place__image" src="./images/arhiz.jpeg" alt="Архыз">
                     <div class="place__info">
                       <h2 class="place__title">Архыз</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
                     </div>
                  </li>
                 <li class="place__item">
                     <img class="place__image" src="./images/Kamchatka.jpg" alt="Камчатка">
                     <div class="place__info">
                       <h2 class="place__title">Камчатка</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
                     </div>
                 </li>
                 <li class="place__item">
                     <img class="place__image" src="./images/baikal.jpg" alt="Байкал">
                     <div class="place__info">
                       <h2 class="place__title">Байкал</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like transition"></button>
+                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
                     </div>
                 </li>
             </ul>
