--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="page">
     <header class="header">
-        <img src="./images/logo.png" alt="Лого" class="header__logo">
+        <img src="./images/logo.svg" alt="Лого" class="header__logo">
     </header>
 
     <section class="popup">
