--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
               <button type="button" aria-label="Редактировать" class="button profile__edit-button"></button>
               <p id="profileAbout" class="profile__about">Исследователь океана</p>
             </div>
-            <button type="button" aria-label="Добавить картинку" class="button profile__button-add"></button>
+            <button type="button" aria-label="Добавить картинку" class="button profile__button-add">
+              <img 
+            </button>
         </section>
         
         <section class="places">
