--- a/index.html
+++ b/index.html
@@ -65,47 +65,47 @@
         </section>
         
         <section class="places">
-            <ul class="place__catalogue"> 
-                <li class="place__item">
-                    <img class="place__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
-                    <div class="place__info">
-                      <h2 class="place__title">Карачаево-Черкесия</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
+            <ul class="places__catalogue"> 
+                <li class="places__item">
+                    <img class="places__image" src="./images/Karachaevsk.jpg" alt="Карачаевск">
+                    <div class="places__info">
+                      <h2 class="places__title">Карачаево-Черкесия</h2>
+                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
                     </div>
                 </li>
-                <li class="place__item">
-                    <img class="place__image" src="./images/Elbrus.png" alt="гора Эльбрус">
-                    <div class="place__info">
-                      <h2 class="place__title">Эльбрус</h2>
-                       <button type="button" aria-label="Нравится" class="button place__button-like"></button>
+                <li class="places__item">
+                    <img class="places__image" src="./images/Elbrus.png" alt="гора Эльбрус">
+                    <div class="places__info">
+                      <h2 class="places__title">Эльбрус</h2>
+                       <button type="button" aria-label="Нравится" class="button places__button-like"></button>
                     </div>
                 </li>
-                <li class="place__item">
-                    <img class="place__image" src="./images/Donbai.png" alt="Донбай">
-                    <div class="place__info">
-                      <h2 class="place__title">Донбай</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
+                <li class="places__item">
+                    <img class="places__image" src="./images/Donbai.png" alt="Донбай">
+                    <div class="places__info">
+                      <h2 class="places__title">Донбай</h2>
+                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
                     </div>
                 </li>
-                <li class="place__item">
-                    <img class="place__image" src="./images/arhiz.jpeg" alt="Архыз">
-                    <div class="place__info">
-                      <h2 class="place__title">Архыз</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
+                <li class="places__item">
+                    <img class="places__image" src="./images/arhiz.jpeg" alt="Архыз">
+                    <div class="places__info">
+                      <h2 class="places__title">Архыз</h2>
+                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
                     </div>
                  </li>
-                <li class="place__item">
-                    <img class="place__image" src="./images/Kamchatka.jpg" alt="Камчатка">
-                    <div class="place__info">
-                      <h2 class="place__title">Камчатка</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
+                <li class="places__item">
+                    <img class="places__image" src="./images/Kamchatka.jpg" alt="Камчатка">
+                    <div class="places__info">
+                      <h2 class="places__title">Камчатка</h2>
+                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
                     </div>
                 </li>
-                <li class="place__item">
-                    <img class="place__image" src="./images/baikal.jpg" alt="Байкал">
-                    <div class="place__info">
-                      <h2 class="place__title">Байкал</h2>
-                        <button type="button" aria-label="Нравится" class="button place__button-like"></button>
+                <li class="places__item">
+                    <img class="places__image" src="./images/baikal.jpg" alt="Байкал">
+                    <div class="places__info">
+                      <h2 class="places__title">Байкал</h2>
+                        <button type="button" aria-label="Нравится" class="button places__button-like"></button>
                     </div>
                 </li>
             </ul>
