внесены поправки в footer, header, popup, places, profile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="popup">
       <div class="popup__container">
-        <button type="button" aria-label="Закрыть" class="button popup__close popup__close_edit">
+        <button type="button" aria-label="Закрыть" class="button popup__close">
         </button>
           <h2 class="popup__title"> 
             Редактировать профиль
@@ -52,9 +52,7 @@
     <main class="container">
       <div class="content">
         <section class="profile">
-            <div class="profile__avatar">
-              <img class="profile__image" src="./images/avatar.jpg" alt="Профиль фото">
-            </div>
+            <img class="profile__image" src="./images/avatar.jpg" alt="Профиль фото">
             <div class="profile__info">
               <h1 id="profileName" class="profile__name">Жак-Ив Кусто</h1>
               <button type="button" aria-label="Редактировать" class="button profile__edit-button"></button>
