popup_card works

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             value="Исследователь океана"
             placeholder="О себе"
           >
-          <button type="submit" class="popup__button-submit">Сохранить</button>
+          <button type="submit" class="popup__button-submit popup__button-submit_profile">Сохранить</button>
         </form>
       </div>
     </section>
@@ -153,7 +153,7 @@
   
 
     <template id="cards-template">
-      <div class="places">
+      <li class="places">
         <img class="places__image" src="#" alt="#" />
         <div class="places__info">
           <h2 class="places__title"></h2>
@@ -162,7 +162,7 @@
           </div>
         </div>
         <button type="button" aria-label="Удалить" class="button places__button-delete"></button>
-      </div>
+      </li>
     </template>
 
     <script src="./script/index.js"></script>  
